[tool.poetry]
name = "compose-viewer"
version = "0.1.0"
description = ""
authors = ["Varun Ramesh <varunramesh@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
textual = "^2.1.2"


[tool.poetry.group.dev.dependencies]
textual-dev = "^1.7.0"
ruff = "^0.9.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
compose-viewer = "compose_viewer:main"